[project]
name = "privrl"
version = "1.0.0"
description = "Privacy Risk RL Environment"
authors = [{name = "Piyush Rathod"}]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "websockets",
    "openai"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"