[project]
name = "privrl"
version = "1.0.0"
description = "Privacy Risk RL Environment"
authors = [{name = "Piyush Rathod"}]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "websockets",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"